--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-static-copy": "^0.17.0"
   },
   "dependencies": {
+    "fullcalendar": "^6.1.15",
     "lottie-web": "^5.12.2",
     "swiper": "^11.1.14"
   }
