--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-PROJECT_ID=
-PROJECT_NAME=
+PROJECT_ID=wp-starter
+PROJECT_NAME=wp-starter
 DOCKER_COMPOSE_FILE=docker-compose.yml
 
 HOST=0.0.0.0 # unused so far
@@ -10,9 +10,11 @@ UID=1006
 GID=1006
 APP_UID=1006
 
-ENVIRONMENT=local # unused so far
+ENVIRONMENT=local
+PUBLIC_NAME="presspack" # unused so far
 
 DB_HOST=mysql
+# DB_CLIENT=root # unused so far
 DB_PORT=3306
 DB_DATABASE=wordpress
 DB_USER=root
@@ -21,11 +23,15 @@ DB_PASSWORD=wordpress
 PMA_HOST=mysql
 PMA_USER=root
 PMA_PASSWORD=wordpress
+ 
+WP_TABLE_PREFIX=xwcx_
+# WP_DEBUG=1
+# WP_DEBUG_LOG=1
+# WP_DEBUG_DISPLAY=0
 
-WP_TABLE_PREFIX=wp_
 WP_DEBUG=1
 WP_DEBUG_LOG=1
-WP_DEBUG_DISPLAY=0
+WP_DEBUG_DISPLAY=1
 
 AUTH_KEY="whateveRKEYhashH3r!1"
 SECURE_AUTH_KEY="whateveRKEYhashH3r!2"
@@ -41,17 +47,7 @@ ACF_PRO_KEY=YOUR_ACF_PRO_KEY
 GRAVITY_FORMS_KEY=YOUR_GF_KEY
 WPML_USER_ID=YOUR_WPML_USER_ID
 WPML_KEY=YOUR_WPML_KEY
-WC_GZD_ENCRYPTION_KEY=YOUR_WC_GZD_ENCRYPTION_KEY
 
 # JS Build 
 NODE_HOST=localhost
 NODE_PORT=3000
-
-WORDPRESS_ENABLE_MULTISITE=yes
-WORDPRESS_MULTISITE_NETWORK_TYPE=subdirectory
-WP_REDIS_HOST=cache
-WP_REDIS_PORT=6379
-WP_REDIS_PREFIX=cache_
-WP_REDIS_DATABASE=0
-WP_REDIS_TIMEOUT=1
-WP_REDIS_READ_TIMEOUT=1
