security: block XML-RPC and REST API user enumeration

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+# Block XML-RPC (brute force / DDoS risk)
+<Files xmlrpc.php>
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+</Files>
+
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
